--- a/AnsibleWorkShop/roles/ansible-podman-rootless-play/vars/main.yml
+++ b/AnsibleWorkShop/roles/ansible-podman-rootless-play/vars/main.yml
@@ -46,6 +46,7 @@ vars_podman_play:
     # - /path/to/configmap2
   debug: # false ← (default) / true
   executable: # podman ← (default)
+  force: # false / true , when state set to absent, whether delete related volume mention in kube_file
   kube_file: # !!required, skip if empty
   log_driver: # Set logging driver for all created containers.
   log_level: # error ← (default) / info / warn / error / fatal / panic
@@ -56,9 +57,10 @@ vars_podman_play:
   recreate: # false / true
   seccomp_profile_root: # /var/lib/kubelet/seccomp ← (default)
   state: # !!required, created / started / absent , containers.podman.podman_play will skip if empty
-  force: # false / true , when state set to absent, whether delete related volume mention in kube_file
   tls_verify: # false / true
   username: # The username and password to use to authenticate with the registry if required.
+  env_var:
+    PODMAN_USERNS: # keep-id / keep-id:uid=200,gid=210 / auto / nomap, https://docs.podman.io/en/latest/markdown/options/userns.container.html
     
 # vars_pod_name: # Name of the pod to generate systemd unit file, if empty, below process will be skipped
 
