add containers.podman collection

--- a/AnsibleWorkShop/collenctions/requirements.yml
+++ b/AnsibleWorkShop/collenctions/requirements.yml
@@ -1,6 +1,8 @@
+# code: language=ansible
 ---
 collections:
   - name: ansible.utils
   - name: community.general
   - name: ansible.posix
   - name: kubernetes.core
+  - name: containers.podman
