--- a/AnsibleWorkShop/project/Invoke-PodmanRootlessPlay.yml
+++ b/AnsibleWorkShop/project/Invoke-PodmanRootlessPlay.yml
@@ -3,25 +3,12 @@
 - hosts: kube-1 # kube-2
   gather_facts: yes
   tasks:
+    - name: incloude vars
+      ansible.builtin.include_vars:
+        file: vars/podman_play-samba.yml
+        # file: vars/podman_play-freeipa.yml
+
      # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
     - name: run role ansible-podman-rootless-provision
       ansible.builtin.include_role:
         name: ansible-podman-rootless-play
-      vars:
-        vars_podman_volume:
-          name: samba
-          state: present
-        vars_podman_play:
-          kube_file: /KubeWorkShop/Samba/aio-samba.yaml
-          state: started # absent / created / started
-          force: true
-          # env_var:
-          #   PODMAN_USERNS: keep-id:uid=1000,gid=1000
-        vars_podman_generate_systemd:
-          name: samba
-        vars_service:
-          podman_pod:
-            user_scope:
-              skipped: false
-              enabled: true
-              state: started
