improve podman rootless play role

--- a/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanPlay.yml
+++ b/AnsibleWorkShop/project/roles/ansible-podman-rootless-play/tasks/Invoke-PodmanPlay.yml
@@ -29,7 +29,7 @@
 
 - name: Run podman kube down
   ansible.builtin.shell:
-    cmd: podman kube down "/home/{{ ansible_user }}/.ansible/tmp/{{ podman_play.kube_file.split('/')[-1] }}" {{ force | default(omit) }}
+    cmd: "{{ podman_play.executable | default(\"podman\") }} kube down /home/{{ ansible_user }}/.ansible/tmp/{{ podman_play.kube_file.split('/')[-1] }} {{ force | default(omit) }}"
   vars:
     force: "{% if podman_play.force %}--force{% endif %}"
   become_user: "{{ ansible_user }}"
