switch var file

--- a/AnsibleWorkShop/project/Invoke-PodmanRootlessPlay.yml
+++ b/AnsibleWorkShop/project/Invoke-PodmanRootlessPlay.yml
@@ -5,8 +5,8 @@
   tasks:
     - name: incloude vars
       ansible.builtin.include_vars:
-        file: vars/podman_play-samba.yml
-        # file: vars/podman_play-freeipa.yml
+        # file: vars/podman_play-samba.yml
+        file: vars/podman_play-freeipa.yml
 
      # https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html#including-roles-dynamic-reuse
     - name: run role ansible-podman-rootless-provision
