--- a/AnsibleWorkShop/project/vars/podman_play-freeipa.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-freeipa.yml
@@ -2,7 +2,7 @@
 ---
 vars_podman_play:
   kube_file: /KubeWorkShop/FreeIPA/aio-freeipa.yaml
-  state: absent # absent / created / started
+  state: started # absent / created / started
   force: true
   # env_var:
   #   PODMAN_USERNS: keep-id:uid=1000,gid=1000
