--- a/KubeWorkShop/FreeIPA/aio-freeipa.yaml
+++ b/KubeWorkShop/FreeIPA/aio-freeipa.yaml
@@ -44,8 +44,11 @@ spec:
   hostname: ipa.infra.sololab
   containers:
     - name: freeipa
-      image: quay.io/freeipa/freeipa-server:fedora-37-4.10.0
+      image: quay.io/freeipa/freeipa-server:fedora-37-4.10.1
+      # fedora-37-4.10.0 has bug when stup dirsvc
+      # image: quay.io/freeipa/freeipa-server:fedora-37-4.10.0
       # image: docker.io/freeipa/freeipa-server:fedora-37-4.10.0
+      imagePullPolicy: IfNotPresent
       resources:
         limits:
           memory: "1536Mi"
@@ -108,8 +111,8 @@ spec:
           mountPath: /data/ipa-server-install-options
           subPath: ipa-server-install-options
         # https://github.com/freeipa/freeipa-container/commit/024676573b6a59b4b361e35808f55739bd793e63  
-        - name: dshm
-          mountPath: /dev/shm
+        # - name: dshm
+        #   mountPath: /dev/shm
         # - name: cgroups
         #   mountPath: /sys/fs/cgroup
         #   readOnly: true
@@ -126,10 +129,10 @@ spec:
           - key: ipa-server-install-options
             path: ipa-server-install-options
     # https://github.com/freeipa/freeipa-container/commit/024676573b6a59b4b361e35808f55739bd793e63  
-    - name: dshm
-      emptyDir:
-        medium: Memory
-        sizeLimit: 128Mi
+    # - name: dshm
+    #   emptyDir:
+    #     medium: Memory
+    #     sizeLimit: 128Mi
     # - name: cgroups
     #   hostPath:
     #     path: /sys/fs/cgroup
