--- a/AnsibleWorkShop/builder/definition-without_proxy.yml
+++ b/AnsibleWorkShop/builder/definition-without_proxy.yml
@@ -18,8 +18,7 @@ additional_build_steps:
   append: 
     - ARG TERRAFORM_VERSION=1.3.6
 
-    - RUN dnf install -y unzip && 
-      cd /tmp && 
+    - RUN cd /tmp && 
       curl -LO https://releases.hashicorp.com/terraform/$TERRAFORM_VERSION/terraform_${TERRAFORM_VERSION}_linux_amd64.zip && 
       unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip && 
       install -o root -g root -m 0755 terraform /usr/local/bin/terraform
