--- a/AnsibleWorkShop/project/vars/podman_play-samba.yml
+++ b/AnsibleWorkShop/project/vars/podman_play-samba.yml
@@ -1,9 +1,8 @@
 # code: language=ansible
 ---
 vars_podman_play:
+  state: absent # absent / created / started
   kube_file: /KubeWorkShop/Samba/aio-samba.yaml
-  state: started # absent / created / started
-  force: true
   # env_var:
   #   PODMAN_USERNS: keep-id:uid=1000,gid=1000
 vars_podman_generate_systemd:
